Remove padding from text cell to avoid unnecessary horizontal scrollbar

--- a/src/sql/workbench/contrib/notebook/browser/notebookViews/notebookViewsGrid.css
+++ b/src/sql/workbench/contrib/notebook/browser/notebookViews/notebookViewsGrid.css
@@ -417,6 +417,10 @@
 	bottom:15px
 }
 
+.nb-grid-stack.grid-stack text-cell-component .notebook-preview {
+	padding: 0px 0px 0px;
+}
+
 .nb-grid-stack.grid-stack output-area-component .notebook-output {
 	padding: 0px 0px 0px;
 }
